--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 baseURL: "precious-meerkat-129d24.netlify.app"
 title: Logseq Mastery blog
 paginate: 5
-theme: PaperMod
+theme: hugo-PaperMod
 
 enableRobotsTXT: true
 buildDrafts: false
