--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "precious-meerkat-129d24.netlify.app"
+baseURL: https://precious-meerkat-129d24.netlify.app
 title: Logseq Mastery blog
 paginate: 5
 theme: PaperMod
