Update to new baseURL

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://precious-meerkat-129d24.netlify.app
+baseURL: https://blog.logseqmastery.com/
 title: Logseq Mastery blog
 paginate: 5
 theme: PaperMod
